# pynodewidget

./: .gitignore  404.html  CLEANUP_REPORT.md  DEADCODE_CLEANUP_REPORT.md  README.md  hatch_build.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  standalone.css  standalone.iife.js  workflow_fullscreen.html  workflow_interactive.html  workflow_static.html
.github/workflows/: ci.yml  docs.yml  publish.yml
ROADMAP/: index.html
api/python/: index.html
contributing/building/: index.html
contributing/development/: index.html
developer/: index.html
developer/architecture/: index.html
developer/components/: index.html
developer/extending/: index.html
developer/field-registry/: index.html
developer/handles/: index.html
developer/hooks/: index.html
developer/javascript/: index.html
developer/layout/: index.html
developer/layouts/: index.html
developer/state/: index.html
developer/types/: index.html
docs/developer/: architecture.md  components.md  (+7 more)
examples/: export_standalone_demo.py  gridbuilder_comparison_demo.py  gridbuilder_preset_demo.py  index.html  json_schema_node_demo_enhanced_marimo.py  marimo_simple_demo.py  pynodewidget_demo.py  vscdode_demo.py  workflow.json
guides/: index.html
js/: index.ts  package.json  vite.config.standalone.ts  vitest.config.ts
search/: search_index.json
tests/: INTEGRATION_TESTS.md  test_grid_builder_presets.py  test_import_export.py  test_json_schema_node_widget.py  test_label_inference.py  test_node_operations.py  test_node_registration.py  test_node_templates.py  test_widget_basic.py
(+131 files in other folders)
