[project]
name = "pynodeflow"
version = "0.1.0"
description = "A Python wrapper for ReactFlow using AnyWidget - build interactive node graphs without JavaScript"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.0",
    "traitlets>=5.14.0",
]
authors = [
    { name = "Henning", email = "" }
]
keywords = ["jupyter", "widget", "reactflow", "nodes", "graph"]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pynodeflow"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.sdist.hooks.custom]
path = "hatch_build.py"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]
